--- a/src/pages/Gamifield/style.css
+++ b/src/pages/Gamifield/style.css
@@ -6,7 +6,7 @@
 .video-container{
     max-width: 800px;
     margin: 0 auto;
-    padding: 10px;
+    padding: 30px 10px;
 }
 .title-with-bar {
     display: flex;
