--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -221,3 +221,74 @@
 
    
 }
+
+.containerFifthSection {
+  margin-left: 12rem;
+  margin-top: 15rem;
+
+
+  .fifthSectionFlex {
+    display: flex;
+    gap: 12rem;
+
+    .fifthSectionFlexContent {
+      display: flex;
+      flex-direction: column;
+      gap: 110px;
+
+      div {
+        border-left: solid 3px #c51700;
+        padding: 0 20px;
+      }
+
+
+      h1 {
+        padding: 0;
+        font-weight: bold;
+        border: none;
+        font-size: 2.3rem;
+        letter-spacing: 0.2rem;
+      }
+
+      p {
+        font-size: 1.5rem;
+      }
+      
+      button {
+        background-color: #c51700;
+        color: #fff;
+        padding: 13px 9rem;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.2s ease;
+        margin: 0 auto;
+
+        &:hover {
+          background-color: darken(#c51700, 10%);
+        }
+      }
+
+
+      
+
+
+
+
+    }
+
+
+
+    .fifthSectionFlexImgWrapper {
+
+      width: 23rem;
+      height: 23rem;
+      border-radius: 9999px;
+      background-color: rgb(201, 201, 201);
+      margin-bottom: 2rem;
+    }
+
+
+
+  }
+}
