inclusão de navbar e sidebar, tela de listagem cultura e principio alterado

--- a/src/pages/MinigameChose/styles.module.css
+++ b/src/pages/MinigameChose/styles.module.css
@@ -4,6 +4,11 @@
   margin: 0 auto;
   padding: 20px;
 }
+.containerThirdSection h5, .containerThirdSection h1,
+.containerFourthSection h5,
+.containerFourthSection h1 {
+  margin-left: 15rem;
+}
 .containerThirdSection .thirdSectionContent,
 .containerFourthSection .thirdSectionContent {
   width: 60%;
