--- a/src/pages/MinigameChose/styles.module.scss
+++ b/src/pages/MinigameChose/styles.module.scss
@@ -6,6 +6,11 @@
   margin: 0 auto;
   padding: 20px;
 
+  h5, h1 {
+    margin-left: 15rem;
+  }
+
+
   .thirdSectionContent {
     width: 60%;
     margin: 5rem auto;
@@ -155,3 +160,6 @@
 
   }
 }
+
+
+
