--- a/src/pages/PreChose/styles.module.css
+++ b/src/pages/PreChose/styles.module.css
@@ -1,6 +1,5 @@
 .containerThirdSection {
-  width: 100%;
-  margin: 0 auto;
+  margin-left: 15rem;
   padding: 20px;
 }
 .containerThirdSection h5 {
@@ -12,15 +11,15 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   gap: 50px;
 }
 .containerThirdSection .thirdSectionContent button {
   background-color: #c51700;
   color: #fff;
-  padding: 13px 20px;
+  padding: 13px 100px;
   border: none;
   border-radius: 5px;
-  width: 30%;
   cursor: pointer;
   transition: background-color 0.2s ease;
   margin: 0 auto;
