--- a/src/pages/PreChose/styles.module.scss
+++ b/src/pages/PreChose/styles.module.scss
@@ -1,7 +1,6 @@
 
 .containerThirdSection {
-  width: 100%;
-  margin: 0 auto;
+  margin-left: 15rem;
   padding: 20px;
   h5 {
     font-size: 1.45rem;
@@ -13,16 +12,16 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     gap: 50px;
     
 
     button {
       background-color: #c51700;
       color: #fff;
-      padding: 13px 20px;
+      padding: 13px 100px;
       border: none;
       border-radius: 5px;
-      width: 30%;
       cursor: pointer;
       transition: background-color 0.2s ease;
       margin: 0 auto;
