--- a/src/pages/SocialMedia/styles.module.css
+++ b/src/pages/SocialMedia/styles.module.css
@@ -3,8 +3,8 @@ body {
 }
 
 .containerThirdSection {
-  width: 100%;
-  margin: 0 auto;
+  width: 80%;
+  margin-left: 20rem;
   padding: 20px;
 }
 .containerThirdSection h5 {
