--- a/src/pages/SocialMedia/styles.module.scss
+++ b/src/pages/SocialMedia/styles.module.scss
@@ -3,8 +3,8 @@ body {
 }
 
 .containerThirdSection {
-  width: 100%;
-  margin: 0 auto;
+  width: 80%;
+  margin-left: 20rem;
   padding: 20px;
   h5 {
     font-size: 1.45rem;
