--- a/src/components/NavBarc/styles.module.css
+++ b/src/components/NavBarc/styles.module.css
@@ -1,4 +1,4 @@
-.LayoutHeader {
+.NavbarContainer {
     width: 100%;
     display: flex;
     align-items: center;
@@ -7,18 +7,22 @@
     background-color: rgb(36, 36, 36);
     padding: 0.5rem 0 0.5rem 0;
 }
-.LayoutHeader .BellIconDiv {
+
+.NavbarContainer .BellIconDiv {
     border-right: 2px grey solid;
     padding: 1rem;
 }
-.LayoutHeader .BellIconDiv img {
+
+.NavbarContainer .BellIconDiv img {
     width: 2rem;
     filter: invert(100%);
 }
-.LayoutHeader p {
+
+.NavbarContainer p {
     font-size: 1.2rem;
     color: #FFF;
 }
-.LayoutHeader .userIcon {
+
+.NavbarContainer .userIcon {
     width: 4rem;
 }
