roteamento do welcome kit no AppRoutes.jsx e welcome kit feito

--- a/src/pages/Ferramentas/styles.module.scss
+++ b/src/pages/Ferramentas/styles.module.scss
@@ -103,7 +103,9 @@
             margin-bottom: -1.1rem;
             margin-left: -4.2rem;
 
-            border-radius: 8px;
+            border-bottom-left-radius: 8px;
+            border-bottom-right-radius: 8px;
+            border-top-right-radius: 0;
             
             
             
