--- a/src/components/JornadaPage4/styles.module.scss
+++ b/src/components/JornadaPage4/styles.module.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    background-color: #e7e7e7;
 
     padding-left: 2rem;
     padding-top: 2rem;
@@ -20,7 +21,7 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
-        background-color: #fff;
+        background-color: #f7f7f7;
         border-radius: 16px;
 
         @media (max-width: 876px) {
