--- a/src/components/WelcomeKitPage4/styles.module.scss
+++ b/src/components/WelcomeKitPage4/styles.module.scss
@@ -1,29 +1,52 @@
+html {
+  overflow-x: hidden;
+}
+
 .containerFifthSection {
-margin-top: 2rem;
+  width: 80%;
+margin: 2rem auto;
 display: flex;
 align-items: center;
-margin-left: 14rem;
-
-
-
-@media (max-width: 878px) {
-  margin-left: 6rem;
-
- margin-bottom: 10rem;
-  
-}
 
 img {
   width: 30dvw;
   height: 50dvh;
+  
 
   @media (max-width: 878px) {
-    width: 100%;
-    height: 40dvh;
-    margin-left: -200px;
-
-
+    width: 70dvw;
+    margin-left: -1rem;
+    margin-top: 2rem;
+    margin-bottom: 15rem;
     
+  }
+}
+
+
+.codigoDiv {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 3rem;
+
+  p {
+    font-size: 2rem !important;
+    font-weight: 300;
+
+    @media (max-width:878px) {
+      font-size: 1.5rem !important;
+      
+    }
+  }
+
+  .codigoDivNumber {
+    padding: 1.5rem 4rem;
+    border: 2px solid #2D94CE;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+
+    p {
+      color: #2D94CE;
+    }
   }
 }
 
@@ -33,6 +56,7 @@ img {
     justify-content: center;
     gap: 20rem;
     width: 80%;
+   margin: 0 auto;
 
     @media (max-width: 878px) {
       flex-direction: column;
@@ -40,26 +64,31 @@ img {
     }
 
     .fifthSectionFlexContent {
-      display: flex;
+      display: flex;  
       align-items: center;
-      gap: 110px;
-      
+      gap: 100px;
 
       @media (max-width: 878px) {
         gap: 40px;
         flex-direction: column;
+        margin-left: 4rem;
         
       }
 
       .sectionContentStyling {
         border-left: solid 3px #c51700;
         padding: 0 20px;
-        width: 20rem;
-      }
+        margin-bottom: 4rem;
+        
+       
+
+        @media (max-width: 878px) {
+          margin-top: 12rem;
+          
+        }
 
 
-      .actionButtonDiv {
-        width: 30rem;
+       
       }
 
 
@@ -70,37 +99,37 @@ img {
         font-size: 2.5rem;
         letter-spacing: 0.2rem;
 
-        @media (max-width: 876px) {
+        @media (max-width: 376px) {
           font-size: 2rem;
+         
           
         }
       }
 
       p {
-        font-size: 1.5rem;
+        font-size: 1.9rem;
       }
       
       .navLink {
-        background-color: #CE332D;
+        background-color: #c51700;
         color: #fff;
-        padding: 12px 12rem;
+        padding: 18px 1.2rem;
+       text-decoration: none;
         border: none;
         border-radius: 5px;
         cursor: pointer;
         transition: background-color 0.2s ease;
-        text-decoration: none;
-      
-
+        
+       
 
         &:hover {
-          background-color: darken(#CE332D, 10%);
+          background-color: darken(#c51700, 10%);
         }
-
 
         @media (max-width: 878px) {
           position: absolute;
-          bottom: 5%;
-          left: 16%;
+          bottom: -40%;
+          left: 18%;
           width: 80%;
           
         
@@ -125,3 +154,4 @@ img {
 
   }
 }
+
