--- a/src/components/WelcomeKitPage5/styles.module.scss
+++ b/src/components/WelcomeKitPage5/styles.module.scss
@@ -3,7 +3,7 @@
 }
 
 .containerFifthSectionNormal {
-margin-top: 2rem;
+margin-top: 5rem;
 display: flex;
 flex-direction: column;
 margin-left: 14rem;
@@ -22,6 +22,7 @@ h1 {
   .radioDiv {
     display: flex;
     gap: 2rem;
+    color: #A0A0A0;
   }
 
 
@@ -33,6 +34,8 @@ h1 {
     
  
   }
+
+  
 
   .labelComentario {
     margin-top: 3rem;
