corrige estilizacao da tela de admin da jornada

--- a/src/components/RespectForCultura/styles.module.scss
+++ b/src/components/RespectForCultura/styles.module.scss
@@ -11,7 +11,7 @@
 
   .thirdSectionContent {
     width: 90%;
-    margin: 5rem auto;
+    margin: 3rem auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -58,7 +58,6 @@ $activeTabBackground: #fdd8d8;
 .tab {
   padding: 1rem 8rem;
   cursor: pointer;
-  color: $tabColor;
 
   @media (max-width: 878px) {
     padding: 0;
@@ -317,9 +316,19 @@ $activeTabBackground: #fdd8d8;
 
 .insideFlexTitleAndBtn {
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
   gap: 20px;
+  margin-top: 40px;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  h3 {
+    font-family: Open Sans;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+  }
 }
 
 .boxFlexIconInsideFlex {
