--- a/src/pages/NovaPaginaTabs/styles.module.scss
+++ b/src/pages/NovaPaginaTabs/styles.module.scss
@@ -11,7 +11,7 @@
 
   .thirdSectionContent {
     width: 90%;
-    margin: 5rem auto;
+    margin: 2rem auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -31,7 +31,6 @@
 
   @media (max-width: 878px) {
     flex-direction: column;
-    
   }
 }
 
@@ -43,7 +42,6 @@ $activeTabBackground: #fdd8d8;
   display: flex;
   justify-content: center;
   align-items: center; /* Vertically center items */
-  background-color: #f4f4f4;
   padding: 10px;
   border-bottom: 3px solid #da2020;
 
@@ -63,7 +61,6 @@ $activeTabBackground: #fdd8d8;
 
     @media (min-width: 879px) {
       display: none; /* Hide arrows on desktop screens */
-      
     }
   }
 }
@@ -91,8 +88,6 @@ $activeTabBackground: #fdd8d8;
   align-items: center; /* Vertically center the selected tab */
   font-weight: 600;
   font-size: 1.3rem;
-
-  
 }
 
 .activeTab {
@@ -103,7 +98,6 @@ $activeTabBackground: #fdd8d8;
 
   @media (max-width: 878px) {
     background-color: #f4f4f4;
-    
   }
   
 }
@@ -361,7 +355,7 @@ $activeTabBackground: #fdd8d8;
   justify-content: space-between;
   flex-wrap: wrap;
   gap: 20px;
-  margin-top: 5rem;
+  align-items: center;
 }
 
 .boxFlexIconInsideFlex {
