--- a/src/components/RespectForCultura/styles.module.scss
+++ b/src/components/RespectForCultura/styles.module.scss
@@ -317,11 +317,11 @@ $activeTabBackground: #fdd8d8;
 .insideFlexTitleAndBtn {
   display: flex;
   gap: 20px;
-  margin-top: 40px;
+  margin-top: 2rem;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-
+  
   h3 {
     font-family: Open Sans;
     font-size: 24px;
