--- a/src/components/JornadaPage1/styles.module.scss
+++ b/src/components/JornadaPage1/styles.module.scss
@@ -1,58 +1,72 @@
 .sectionContainer {
-     width: 80dvw;
-    display: flex;
-    flex-direction: column;
+  width: 80dvw;
+  display: flex;
+  flex-direction: column;
 
-    padding-left: 2rem;
-    padding-top: 2rem;
-    
-    iframe {
-        width: 1000px;
-        height: 557px;
-        margin: 0 auto;
+  padding-left: 2rem;
+  padding-top: 2rem;
 
-        @media (max-width: 876px) {
-            width: 100%;
-        }
+  iframe {
+    width: 1000px;
+    height: 557px;
+    margin: 20px auto;
+
+    @media (max-width: 600px) {
+      width: 327px;
+      height: 184px;
     }
+  }
 
-    h1 {
-        font-size: 2.5rem;
-        font-weight: 300;
+  h1 {
+    width: 355px;
+    font-size: 2.5rem;
+    font-weight: 300;
 
-        @media (max-width: 876px) {
-
-        font-size: 2.5rem;
-
-        }
+    @media (max-width: 600px) {
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
     }
+  }
 
-    p {
-        font-weight: 600;
-        font-size: 1.9rem;
+  p {
+    font-weight: 600;
+    font-size: 1.9rem;
+    font-family: 'Open Sans';
+    font-style: normal;
+
+    @media (max-width: 600px) {
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
     }
+  }
+}
 
+.navLink {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 455px;
+  background-color: #CE332D;
+  color: #fff;
+  padding: 14px 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+  text-decoration: none;
 
+  &:hover {
+    background-color: darken(#CE332D, 10%);
+  }
 
-    .navLink {
-        position: relative !important;
-        background-color: #CE332D;
-        color: #fff;
-        padding: 18px 10rem;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.2s ease;
-        margin: 5rem auto;
-        text-decoration: none;
-
-        &:hover {
-          background-color: darken(#CE332D, 10%);
-        }
-
-        
-        
-      }
-    
-
+  @media (max-width: 600px) {
+    width: 95vw;
+    margin: 10px;
+    position: fixed;
+    bottom: 0;
+  }
 }
