--- a/src/components/NavBarc/NavBarc.css
+++ b/src/components/NavBarc/NavBarc.css
@@ -1,4 +1,4 @@
-.NavbarContainer {
+.LayoutHeader {
   width: 100%;
   display: flex;
   align-items: center;
@@ -7,22 +7,18 @@
   background-color: rgb(36, 36, 36);
   padding: 0.5rem 0 0.5rem 0;
 }
-
-.NavbarContainer .BellIconDiv {
+.LayoutHeader .BellIconDiv {
   border-right: 2px grey solid;
   padding: 1rem;
 }
-
-.NavbarContainer .BellIconDiv img {
+.LayoutHeader .BellIconDiv img {
   width: 2rem;
   filter: invert(100%);
 }
-
-.NavbarContainer p {
+.LayoutHeader p {
   font-size: 1.2rem;
   color: #fff;
 }
-
-.NavbarContainer .userIcon {
+.LayoutHeader .userIcon {
   width: 4rem;
 }
