--- a/src/pages/jornada/JornadaPage1/styles.module.scss
+++ b/src/pages/jornada/JornadaPage1/styles.module.scss
@@ -18,7 +18,7 @@
   }
 
   h1 {
-    width: 355px;
+    max-width: 355px;
     font-size: 2.5rem;
     font-weight: 300;
 
@@ -64,9 +64,10 @@
   }
 
   @media (max-width: 600px) {
-    width: 95vw;
-    margin: 10px;
+    width: 85%;
     position: fixed;
-    bottom: 0;
+    bottom: 10px;
+    left: 10px;
+    right: 10px;
   }
 }
