Ajusta estilizacao das telas do fluxo de ferramentas, cultura e principios  e jornada funcionario

--- a/src/layouts/styles.module.scss
+++ b/src/layouts/styles.module.scss
@@ -46,7 +46,7 @@ $background-color_3: #ffcece;
     min-width: 360px;
     min-height: 100vh;
     transition: transform 0.3s ease;
-
+    overflow-y: hidden;
     @media (max-width: 600px) {
       min-width: 100%;
     }
