--- a/src/components/RedButton/styles.css
+++ b/src/components/RedButton/styles.css
@@ -18,9 +18,6 @@
 
   @media (max-width: 600px) {
     width: 85%;
-    position: fixed;
-    bottom: 10px;
-    left: 10px;
-    right: 10px;
+    position: relative;
   }
 }
