--- a/src/pages/ferramentas/FerramentasCongratsPage2/styles.module.scss
+++ b/src/pages/ferramentas/FerramentasCongratsPage2/styles.module.scss
@@ -1,3 +1,9 @@
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .containerSection {
   display: flex;
   align-items: center;
@@ -5,38 +11,66 @@
   width: 82%;
 
   img {
+    width: 400px;
+  
     @media (max-width: 878px) {
       width: 337px;
       height: 337px;
 
-      margin-bottom: 10rem;
+      margin-bottom: 2rem;
     }
   }
 
   .containerSectionFlex {
     display: flex;
-    gap: 6rem;
+    gap: 2rem;
+    padding: 10rem;
+
 
     @media (max-width: 992px) {
       flex-direction: column;
-      margin-left: 3rem;
       gap: 1rem;
+      padding: 0;
     }
 
     .leftFlex {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      gap: 3rem;
+      gap: 5rem;          
+      padding-left: 9rem;
+
+      @media (max-width: 600px) {
+        padding-left: 0;
+      }
 
       h1 {
         width: 32rem;
         font-size: 3rem;
+        padding: 0 2rem;
+        text-align: start;
+
+        @media (max-width: 600px) {
+          color: #1E1E1E;
+          font-family: Lexend Exa;
+          font-size: 28px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: normal;        }
 
         p {
           margin-top: 1.5rem;
           font-size: 2rem;
           font-weight: 300;
+
+
+        @media (max-width: 992px) {
+          font-family: Lexend Exa;
+          font-size: 24px;
+          font-style: normal;
+          font-weight: 300;
+          line-height: normal;
+        }
         }
 
         @media (max-width: 992px) {
@@ -45,36 +79,6 @@
           margin-left: 1rem;
         }
       }
-    }
-  }
-
-  .navLink {
-    background-color: #c51700;
-    color: #fff;
-    padding: 18px 0;
-    text-decoration: none;
-    text-align: center;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.2s ease;
-
-    &:hover {
-      background-color: darken(#c51700, 10%);
-    }
-
-    @media (max-width: 878px) {
-      position: absolute;
-      bottom: 80px;
-      left: 10%;
-      width: 80%;
-    }
-
-    @media (max-width: 376px) {
-      position: absolute;
-      bottom: -100px;
-      left: 10%;
-      width: 80%;
     }
   }
 }
