--- a/src/pages/ferramentas/FerramentasMain/styles.module.scss
+++ b/src/pages/ferramentas/FerramentasMain/styles.module.scss
@@ -1,9 +1,50 @@
 .containerThirdSection {
-  margin: 0 2rem;
-  padding: 20px;
-  h5 {
-    font-size: 1.45rem;
+  display: flex;
+  flex-direction: column;
+  
+  padding-top: 2rem;
+
+  @media (max-width: 800px) {
+    width: 65vw;
   }
+
+  @media (max-width: 600px) {
+    width: 100%;
+  }
+    
+  h1 {
+    font-family: Lexend Exa;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    margin-left: 2rem;
+    text-align: start;
+    padding: 0 0 0 24px;
+
+    @media (max-width: 600px) {
+      max-width: 300px;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+    }
+  }
+  
+  h5 {
+    font-family: 'Open Sans';
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+
+    margin-left: 2rem;
+
+    @media (max-width: 600px) {
+      margin: 1rem 1rem;
+    }
+  }
+
 
   .navLink {
     position: relative !important;
@@ -23,11 +64,17 @@
   }
 
   .thirdSectionContent {
-    margin: 5rem auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 30px;
+    margin: 5rem auto;
+    padding-left: 3rem;
+    width: 70vw;
+
+    @media (max-width: 600px) {
+      padding-left: 0;
+    }
 
     .boxFlex {
       display: flex;
@@ -79,16 +126,10 @@
           margin-left: 1rem;
 
           @media (max-width: 878px) {
-            margin: 0;
-            margin-right: -4.2rem;
-            margin-bottom: -1.1rem;
-            margin-left: -4.2rem;
-
-            border-bottom-left-radius: 8px;
-            border-bottom-right-radius: 8px;
-            border-top-right-radius: 0;
+            padding: 2rem 0;
+            border: none;
           }
-
+          
           p {
             color: #2d94ce;
           }
