--- a/src/pages/jornada/JornadaPage3/styles.module.scss
+++ b/src/pages/jornada/JornadaPage3/styles.module.scss
@@ -1,82 +1,116 @@
 .sectionContainer {
-  width: 80dvw;
   display: flex;
   flex-direction: column;
-  padding-left: 2rem;
+  
   padding-top: 2rem;
 
-  iframe {
-    width: 1000px;
-    height: 557px;
-    margin: 0 auto;
+  @media (max-width: 800px) {
+    width: 65vw;
+  }
 
-    @media (max-width: 876px) {
-      width: 100%;
+  @media (max-width: 600px) {
+    width: 100%;
+  }
+
+  iframe {
+    width: 60vw;
+    height: 557px;
+    margin: 20px auto;
+
+    @media (max-width: 600px) {
+      width: 327px;
+      height: 184px;
     }
   }
 
   h1 {
-    font-size: 2.5rem;
+    font-family: Lexend Exa;
+    font-size: 24px;
+    font-style: normal;
     font-weight: 300;
+    line-height: normal;
+    margin-left: 2rem;
+    text-align: start;
+    padding: 0 0 0 24px;
 
-    @media (max-width: 876px) {
-      font-size: 2.5rem;
+    @media (max-width: 600px) {
+      max-width: 300px;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
     }
   }
 
   h3 {
+    font-family: 'Open Sans';
+    font-size: 24px;
+    font-style: normal;
     font-weight: 600;
-    font-size: 1.9rem;
-  }
+    line-height: normal;
 
+    margin-left: 2rem;
+
+    @media (max-width: 600px) {
+      margin: 1rem 1rem;
+    }
+  }
+  
   p {
     width: 70%;
     margin: 2rem auto;
   }
+}
 
-  .navLink {
-    position: relative !important;
-    background-color: #ce332d;
-    color: #fff;
-    width: 100%;
-    padding: 1.2rem 0;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.2s ease;
-    text-align: center;
-    text-decoration: none;
 
-    &:hover {
-      background-color: darken(#ce332d, 10%);
-    }
+.navLink {
+  position: relative !important;
+  background-color: #ce332d;
+  color: #fff;
+  width: 100%;
+  padding: 1.2rem 0;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+  text-align: center;
+  text-decoration: none;
+
+  &:hover {
+    background-color: darken(#ce332d, 10%);
+  }
+}
+
+.cardContaienr {
+  display: flex;
+  gap: 20px;
+  margin: 4rem 10rem;
+
+  @media (max-width: 876px) {
+    flex-direction: column;
+    margin: 2rem 2rem;
   }
 
-  .cardContaienr {
+  .cardAndBtn {
     display: flex;
-    gap: 20px;
-    margin: 5rem auto;
+    position: relative;
+    flex-direction: column;
+    width: 400px;
+    margin-bottom: 2rem;
 
-    @media (max-width: 876px) {
-      flex-direction: column;
+    a {
+      margin-top: 1rem;
     }
 
-    .cardAndBtn {
-      display: flex;
-      position: relative;
-      flex-direction: column;
-      width: 400px;
+    .progressBar {
+      width: 88%;
+      position: absolute;
+      bottom: 100px;
+      right: 30px;
+    }
 
-      .progressBar {
-        width: 88%;
-        position: absolute;
-        bottom: 100px;
-        right: 30px;
-      }
-
-      @media (max-width: 876px) {
-        width: 330px;
-      }
+    @media (max-width: 876px) {
+      width: 330px;
     }
   }
 }
