--- a/src/pages/jornada/JornadaPrincipiosPage1/styles.module.scss
+++ b/src/pages/jornada/JornadaPrincipiosPage1/styles.module.scss
@@ -1,50 +1,55 @@
 .sectionContainer {
-  width: 60dvw;
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
-  gap: 2rem;
-  padding-left: 2rem;
+  
   padding-top: 2rem;
 
-  iframe {
-    width: 1000px;
-    height: 557px;
-    margin: 0 auto;
+  @media (max-width: 800px) {
+    width: 100%;
+  }
 
-    @media (max-width: 876px) {
-      width: 100%;
+  iframe {
+    width: 60vw;
+    height: 557px;
+    margin: 20px auto;
+
+    @media (max-width: 600px) {
+      width: 327px;
+      height: 184px;
     }
   }
 
   h1 {
-    font-size: 2.5rem;
+    font-family: Lexend Exa;
+    font-size: 24px;
+    font-style: normal;
     font-weight: 300;
+    line-height: normal;
+    margin-left: 2rem;
+    text-align: start;
+    padding: 0 0 0 24px;
 
-    @media (max-width: 876px) {
-      font-size: 2.5rem;
+    @media (max-width: 600px) {
+      max-width: 300px;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
     }
   }
 
   p {
+    padding-left: 2rem;
     font-weight: 600;
     font-size: 1.9rem;
-  }
+    font-family: "Open Sans";
+    font-style: normal;
 
-  .navLink {
-    position: relative !important;
-    background-color: #ce332d;
-    color: #fff;
-    padding: 18px 10rem;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.2s ease;
-    margin: 5rem auto;
-    text-decoration: none;
-
-    &:hover {
-      background-color: darken(#ce332d, 10%);
+    @media (max-width: 600px) {
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
     }
   }
 }
