--- a/src/pages/ferramentas/FerramentasCongratsPage2/styles.module.scss
+++ b/src/pages/ferramentas/FerramentasCongratsPage2/styles.module.scss
@@ -3,7 +3,9 @@
   flex-direction: column;
   align-items: center;
 }
-
+.ToolLink{
+  text-decoration: none !important;
+}
 .containerSection {
   display: flex;
   align-items: center;
