--- a/src/pages/jornada/JornadaPage2/styles.module.scss
+++ b/src/pages/jornada/JornadaPage2/styles.module.scss
@@ -58,6 +58,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    text-align: justify;
 
     @media (max-width: 600px) {
       font-size: 20px;
