--- a/src/layouts/styles.module.scss
+++ b/src/layouts/styles.module.scss
@@ -36,6 +36,7 @@ $background-color_3: #ffcece;
 
 .layoutMainContainer {
   display: flex;
+  width: 100%;
 
   .layoutSidebar {
     position: relative;
