--- a/src/pages/jornada/JornadaPrincipiosPage1/styles.module.scss
+++ b/src/pages/jornada/JornadaPrincipiosPage1/styles.module.scss
@@ -1,3 +1,11 @@
+.contentContainer {
+  margin-left: 10%;
+
+  @media (max-width: 800px) {
+    margin-left: 0px;
+  }
+}
+
 .sectionContainer {
   display: flex;
   flex-direction: column;
